--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <hr class="bottom-line">
       <footer>
         <p>
-          <a href="https://www.freecodecamp.org" target="_blank">Visit our website</a>
+          <a href="https://mazees.github.io/BeningPlus/" target="_blank">Visit our website</a>
         </p>
       </footer>
     </div>
