--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <hr class="bottom-line">
       <footer>
         <p>
-          <a href="/" target="_blank">Visit our website</a>
+          <a href="#" target="_blank">Visit our website</a>
         </p>
       </footer>
     </div>
