--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         <p>
           <a href="#" target="_blank">Visit our website</a>
         </p>
+        <p>
+          <a href="https://chatgpt.com/" target="_blank">Open ChatGPT</a>
+        </p>
       </footer>
     </div>
   </body>
