--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <a href="#" target="_blank">Visit our website</a>
         </p>
         <p>
-          <a href="https://chatgpt.com/" target="_blank">Open ChatGPT</a>
+          <a href="https:wa.me/6281234489008" target="_blank">Contact Me</a>
         </p>
       </footer>
     </div>
